# Flumen

./: .gitignore  Cargo.toml  README.md  log.txt
crates/flumen-common/: Cargo.toml
crates/flumen-common/src/: lib.rs
crates/flumen-engine/: Cargo.toml
crates/flumen-engine/src/: graph.rs  lib.rs  plugin_manager.rs
crates/flumen-gui/: Cargo.toml
crates/flumen-gui/src/: gui_state.rs  main.rs  renderer.rs  shader.wgsl
plugins/flumen-compressor/: Cargo.toml  manifest.toml
plugins/flumen-compressor/src/: lib.rs
plugins/flumen-delay/: Cargo.toml  manifest.toml
plugins/flumen-delay/src/: lib.rs
plugins/flumen-eq/: Cargo.toml  manifest.toml
plugins/flumen-eq/src/: lib.rs
plugins/flumen-limiter/: Cargo.toml  manifest.toml
plugins/flumen-limiter/src/: lib.rs
plugins/flumen-reverb/: Cargo.toml  manifest.toml
plugins/flumen-reverb/src/: lib.rs
